--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-form": "^1.27.2",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
