--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
