--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.27.2",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
