--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
+    "leaflet": "^1.9.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.10.1",
     "react-simple-typewriter": "^5.0.1",
