--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
     "react": "^19.2.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
@@ -30,6 +31,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "recharts": "^3.5.1",
     "stripe": "^18.5.0",
     "sweetalert2": "^11.26.10",
