--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.2.3",
